--- a/octoprint_feedrate/templates/feedrate_navbar.jinja2
+++ b/octoprint_feedrate/templates/feedrate_navbar.jinja2
@@ -1,3 +1,3 @@
 <div id="feedRate" data-bind="visible: FeedRateModel.isOperational()" class="navbar-text">
-    <span>{{ _('F') }}: </span><span data-bind="text: feedRate"></span><span data-bind="text: settings.settings.plugins.feedrate.frUnits"></span>
+    <span>{{ _('F') }}: </span><span data-bind="text: feedSpeed()"></span><span data-bind="text: settings.settings.plugins.feedrate.displayUnits"></span>
 </div>
